# arabic-script

./: Cargo.toml  LICENSE  NOTICE  README.md
src/: lib.rs
src/core/: arabic_character.rs  mod.rs  unicode_character.rs
src/core/characters/: arabic_damma.rs  arabic_dammatan.rs  arabic_fatha.rs  arabic_fathatan.rs  arabic_kasra.rs  arabic_kasratan.rs  arabic_letter_ain.rs  arabic_letter_alef.rs  arabic_letter_alef_maksura.rs  arabic_letter_alef_with_hamza_above.rs  arabic_letter_alef_with_hamza_below.rs  arabic_letter_alef_with_madda_above.rs  arabic_letter_beh.rs  arabic_letter_dad.rs  arabic_letter_dal.rs  arabic_letter_feh.rs  arabic_letter_ghain.rs  arabic_letter_hah.rs  arabic_letter_hamza.rs  arabic_letter_heh.rs  arabic_letter_jeem.rs  arabic_letter_kaf.rs  arabic_letter_khah.rs  arabic_letter_lam.rs  arabic_letter_meem.rs  arabic_letter_noon.rs  arabic_letter_qaf.rs  arabic_letter_reh.rs  arabic_letter_sad.rs  arabic_letter_seen.rs  arabic_letter_sheen.rs  arabic_letter_tah.rs  arabic_letter_teh.rs  arabic_letter_teh_marbuta.rs  arabic_letter_thal.rs  arabic_letter_theh.rs  arabic_letter_waw.rs  arabic_letter_waw_with_hamza_above.rs  arabic_letter_yeh.rs  arabic_letter_yeh_with_hamza_above.rs  (+6 more)
